--- a/src/src/components/Register/index.css
+++ b/src/src/components/Register/index.css
@@ -1,20 +1,10 @@
 /* General styling */
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  background-color: #f0f4f8;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-} */
 
 .register-form-container4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   max-width: 500px;
   background-color: #ffffff;
